--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,2 @@
 # BACKEND_URI=https://l70mt4kr-4000.inc1.devtunnels.ms/
-REACT_APP_BACKEND_URI=http://localhost:4000/api
+REACT_APP_BACKEND_URI=http://localhost:4000/
